fix sidebar animation on iphone browsers

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -9,7 +9,11 @@
         right: 0;
         top: 0;
         cursor: pointer;
-        transition: transform 1s;
+        -webkit-transition: -webkit-transform 1s ease-out;
+        -moz-transition: transform 1s ease-out;
+        -o-transition: transform 1s ease-out;
+        transition: transform 1s ease-out;
+        // transition: transform 1s;
 
         @include breakpoint(small) {
             transform: translate(0, 100%);
